--- a/DMS_M306/Web.config
+++ b/DMS_M306/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=mysql4.gear.host\dmsm306;Initial Catalog=aspnet-DMS_M306-20170109011813;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=mysql4.gear.host; Initial Catalog=dmsm306;Integrated Security=False; User Id=dmsm306;Password=Jx75M26-dP0-; MultipleActiveResultSets=True" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=mysql4.gear.host; Initial Catalog=dmsm306;Integrated Security=False; User Id=dmsm306;Password=Jx75M26-dP0-; MultipleActiveResultSets=True" />-->
+    <add name="DMSEntities" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=DMSM306;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
