--- a/DMS_M306/packages.config
+++ b/DMS_M306/packages.config
@@ -37,6 +37,7 @@
   <package id="Ninject" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
