--- a/DMS_M306/Web.config
+++ b/DMS_M306/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=mysql4.gear.host\dmsm306;Initial Catalog=aspnet-DMS_M306-20170109011813;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=mysql4.gear.host; Initial Catalog=dmsm306;Integrated Security=False; User Id=dmsm306;Password=Jx75M26-dP0-; MultipleActiveResultSets=True" />-->
-    <add name="DMSEntities" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=DMSM306;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="DMSEntities" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=DMSM306;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DMSEntities" connectionString="Data Source=z1g1haim1s.database.windows.net:1433;Initial Catalog=dms_m306;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
+    <add name="DMSEntities" providerName="System.Data.SqlClient" connectionString="Data Source=z1g1haim1s.database.windows.net, 1433;Initial Catalog=DMS_M306;Integrated Security=False;User Id=developer_bryan;Password=SwissLoot2017$;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -75,7 +77,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.AI.Agent.Intercept" publicKeyToken="31bf3856ad364e35" culture="neutral" />
