--- a/DMS_M306/packages.config
+++ b/DMS_M306/packages.config
@@ -36,10 +36,12 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
+  <package id="ZXing.Net" version="0.14.0.1" targetFramework="net452" />
 </packages>
