--- a/DMS_M306/DMS_M306.csproj
+++ b/DMS_M306/DMS_M306.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Enums\FileClass.cs" />
     <Compile Include="Enums\FileStatus.cs" />
     <Compile Include="Enums\FileStorageType.cs" />
+    <Compile Include="Enums\FileUploadStates.cs" />
     <Compile Include="Enums\UserRoles.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -294,6 +295,7 @@
     <Compile Include="ViewModels\Change\ChangeViewModel.cs" />
     <Compile Include="ViewModels\FileCategory\FileCategoryViewModel.cs" />
     <Compile Include="ViewModels\File\CreateFileViewModel.cs" />
+    <Compile Include="ViewModels\File\EditFileViewModel.cs" />
     <Compile Include="ViewModels\File\FileDetailsViewModel.cs" />
     <Compile Include="ViewModels\File\FilesViewModel.cs" />
     <Compile Include="ViewModels\File\FileViewModel.cs" />
@@ -396,6 +398,8 @@
     <Content Include="Views\Shared\_FileDetails.cshtml" />
     <Content Include="Views\Shared\_ReleasesList.cshtml" />
     <Content Include="Views\Shared\_ReleaseDetails.cshtml" />
+    <Content Include="Views\File\Edit.cshtml" />
+    <Content Include="Views\Shared\_ChangesList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
