--- a/DMS_M306/Web.config
+++ b/DMS_M306/Web.config
@@ -13,7 +13,8 @@
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=mysql4.gear.host; Initial Catalog=dmsm306;Integrated Security=False; User Id=dmsm306;Password=Jx75M26-dP0-; MultipleActiveResultSets=True" />-->
     <!--<add name="DMSEntities" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=DMSM306;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
     <!--<add name="DMSEntities" connectionString="Data Source=z1g1haim1s.database.windows.net:1433;Initial Catalog=dms_m306;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
-    <add name="DMSEntities" providerName="System.Data.SqlClient" connectionString="Data Source=z1g1haim1s.database.windows.net, 1433;Initial Catalog=DMS_M306;Integrated Security=False;User Id=developer_bryan;Password=SwissLoot2017$;MultipleActiveResultSets=True" />
+    <!--<add name="DMSEntities" providerName="System.Data.SqlClient" connectionString="Data Source=z1g1haim1s.database.windows.net, 1433;Initial Catalog=DMS_M306;Integrated Security=False;User Id=developer_bryan;Password=SwissLoot2017$;MultipleActiveResultSets=True" />-->
+    <add name="DMSEntities" providerName="System.Data.SqlClient" connectionString="Data Source=z1g1haim1s.database.windows.net, 1433;Initial Catalog=DMS_M306_Live;Integrated Security=False;User Id=developer_bryan;Password=SwissLoot2017$;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
