--- a/DMS_M306/DMS_M306.csproj
+++ b/DMS_M306/DMS_M306.csproj
@@ -230,6 +230,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Attributes\MinValueValidationAttribute.cs" />
+    <Compile Include="Constants\GlobalConstants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\DownloadController.cs" />
