--- a/DMS_M306/DMS_M306.csproj
+++ b/DMS_M306/DMS_M306.csproj
@@ -233,6 +233,7 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Attributes\FileNameValidationAttribute.cs" />
     <Compile Include="Attributes\MinValueValidationAttribute.cs" />
     <Compile Include="Constants\GlobalConstants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
